--- a/autoprint.cfg
+++ b/autoprint.cfg
@@ -1,9 +1,4 @@
-# mailserver e-mail  password  lprhost lprqueue attachmenttypes copies keepOnServer imapFoldercw
+# mailserver ssl e-mail  password  lprhost lprqueue attachmenttypes copies keepOnServer imapFolder
 # eg.:     
-#mail.google.com "nobody@gmail-com" "1895MP29"   printserver.mydomain.com printer10  .pdf 1 Y "INBOX"
-mail.mydomain.com "nobody" "nobodysPassword"   printerIP lpr  .pdf 2 N
-#
-#
-#
-#
-#
+imap.gmail.com ssl username@gmail.com Your¤#"SecrtPswd 127.0.0.1 Brother_Printer .pdf 1 Y
+
