--- a/autoprint.cfg
+++ b/autoprint.cfg
@@ -1,4 +1,4 @@
-# mailserver ssl e-mail  password  lprhost lprqueue attachmenttypes copies keepOnServer imapFolder
+# mailserver servertype ssl e-mail  password  lprhost lprqueue attachmenttypes copies keepOnServer imapFolder
 # eg.:     
-imap.gmail.com ssl username@gmail.com Your¤#"SecrtPswd 127.0.0.1 Brother_Printer .pdf 1 Y
+imap.gmail.com imap ssl username@gmail.com Your¤#"SecrtPswd 127.0.0.1 Brother_Printer .pdf 1 Y
 
